# cookiecutter-python

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
python-minimal/: README.md  cookiecutter.json
python-minimal/hooks/: post_gen_project.py  pre_gen_project.py
python-minimal/{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
python-minimal/{{cookiecutter.project_slug}}/.github/workflows/: pytest.yml
{{cookiecutter.project_slug}}/: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: pytest.yml
{{cookiecutter.project_slug}}/test/: test_foo.py
{{cookiecutter.project_slug}}/tests/: test_foo.py  test_version.py
