[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "{{cookiecutter.module_name}}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
pandas = "^2.0"
{%- if cookiecutter.use_ruff %}

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py310"
line-length = 88
fix = true
select = [
    "E4", # pycodestyle: import errors
    "E7", # pycodestyle: statement errors
    "E9", # pycodestyle: runtime errors
    "F",  # Pyflakes
]
{%- endif %}
